# Cue-Clock

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Codebase_Context.md  Codebase_Edits.md  DESIGN.md  DEVELOPMENT.md  GEMINI.md  LICENSE  README.md  SECURITY.md  app.json  broadcast-clock.code-workspace  code.html  helloworld.md  package-lock.json  package.json  tailwind.config.js
.claude/: launch.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: ai-log-export.js  ai-scoreboard.js  compute-beta-context.js  compute-digest-context.js  compute-production-context.js  crash-to-issue.js  create-beta-draft.js  create-production-draft.js  deps.sh  pr-checks.sh  promote-to-production.js  send-digest.js
.github/workflows/: ai-evals.yml  claude.yml  (+30 more)
app/: +not-found.tsx  .env.example  .gitignore  LICENSE  README.md  _layout.tsx  app.config.js  app.json  eas.json  index.tsx  jest.config.js  nixpacks.toml  package-lock.json  package.json  tailwind.config.js
components/: ClockPicker.tsx  HelpModal.tsx  TargetBlock.tsx
constants/: Colors.ts  colors.ts  timezones.ts
data/: ai-scoreboard.json
docker/: Dockerfile.android
docs/: ai-scoreboard.md  wiki.md
scripts/: android-release-dry-run-docker.sh  android-release-dry-run.sh  build-android-local.sh
tests/ai/web/: pyproject.toml  runner.py  visual_probe.js
website/: AGENTS.md  README.md  eslint.config.mjs  jest.config.js  next.config.ts  package-lock.json  package.json
(+126 files in other folders)
