# WHY uv-managed: uv resolves + installs ~10x faster than pip and creates a
# project-local .venv automatically. Single command (`uv sync`) bootstraps.
# WHY pinned >= floors only (no caps): browser-use moves fast; we want the
# latest patch + minor at install time. The lockfile (uv.lock) pins exact
# versions reproducibly without us hand-managing the upper bound.

[project]
name = "cueclock-ai-web-runner"
version = "0.0.0"
description = "browser-use + Gemini agent driving the Cue Clock web build."
requires-python = ">=3.11"
dependencies = [
  # browser-use: the agent + browser harness. Bundles its own playwright pin.
  "browser-use>=0.7.0",
  # python-dotenv: load tests/ai/.env explicitly from the runner.
  "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
